fixed categories overlapping with footer
On small resolutions the category div was overlapping with
the footer.

--- a/css/user-page.css
+++ b/css/user-page.css
@@ -113,7 +113,7 @@ span.edible{
 
 .content{
     width:100%;
-    min-height: 100%;
+    min-height: 440px;
     background-color: #FFF;
     margin: 0 auto;
     box-sizing:border-box;
